WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239881
[GCC] std::remove_cvref is undefined in GCC8.4
https://bugs.webkit.org/show_bug.cgi?id=239881
Summary
[GCC] std::remove_cvref is undefined in GCC8.4
Diego Pino
Reported
2022-04-28 18:44:04 PDT
[GCC] std::remove_cvref is undefined in GCC8.4
Attachments
Patch
(4.70 KB, patch)
2022-04-28 19:01 PDT
,
Diego Pino
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(4.57 KB, patch)
2022-04-28 20:27 PDT
,
Diego Pino
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Diego Pino
Comment 1
2022-04-28 19:01:32 PDT
Created
attachment 458563
[details]
Patch
Diego Pino
Comment 2
2022-04-28 20:27:55 PDT
Created
attachment 458565
[details]
Patch
EWS
Comment 3
2022-04-29 00:51:36 PDT
Committed
r293608
(
250114@main
): <
https://commits.webkit.org/250114@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 458565
[details]
.
Radar WebKit Bug Importer
Comment 4
2022-04-29 00:52:13 PDT
<
rdar://problem/92511498
>
Philippe Normand
Comment 5
2022-04-29 01:35:52 PDT
Broke clang builds? In file included from /app/webkit/Source/WTF/wtf/FunctionDispatcher.cpp:26: In file included from /app/webkit/Source/WTF/config.h:31: In file included from /app/webkit/Source/WTF/wtf/FastMalloc.h:26: /app/webkit/Source/WTF/wtf/StdLibExtras.h:612:8: error: redefinition of 'remove_cvref' struct remove_cvref { ^ /usr/lib/gcc/x86_64-unknown-linux-gnu/11.2.0/../../../../include/c++/11.2.0/type_traits:3225:12: note: previous definition is here struct remove_cvref ^ 1 error generated.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug